nav overflow bug

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav{
     display: none;
     top: 0;
     left: 0;
-    width: 40%;
+    width: 45%;
     height: 150%;
     background-color: lightslategray;
     z-index: 1;
